[package]
name = "learn"
version = "0.1.0"
authors = ["Max Block <maxblock@pm.me>"]
edition = "2018"



[dependencies]
rocket = "0.4.5"
serde = { version = "1.0.116", features = ["derive"] }
#serde_json = "1.0.57"
rocket_contrib = { version = "0.4.5",default-features = false,features = ["json"] }




